# Research-Unix-v8

./: .gitignore  BUILD.md  CMakeLists.txt  README  SETUP.md  TOOLS.md  setup.sh
analysis/: cloc.md  cppcheck.md  cscope.md  diffoscope.md  dtrace.md  eslint.md  flake8.md  flawfinder.md  flcopy-audit.md  gdb.md  jscpd.md  jshint.md  lizard.md  make-audit.md  mypy.md  nyc.md  pylint.md  run-flcopy-audit.sh  run-make-audit.sh  semgrep.md  setup-report.md  sloccount.md  valgrind.md
analysis/logs/: summary.txt
cmake/: Hardening.cmake  Require.cmake
modern/: CMakeLists.txt  Makefile  README-modern.md  flcopy.c  test-flcopy.sh
v8/usr/src/libF77/: main.c
